--- a/filter-grid.css
+++ b/filter-grid.css
@@ -80,6 +80,7 @@
     .filtergrid-checkbox-list,
     .filtergrid-radiobutton-list {
         padding: 0.6rem;
+        margin-right: 0;
     }
 
     .label-container {
@@ -102,6 +103,14 @@
     .filtergrid-from-number:has(+ .visually-hidden) {
         width: 100%;
         max-width: 30rem;
+    }
+
+    .no-display {
+        display: none;
+    }
+    .span-2 {
+        grid-column: 2 / span 2;
+        padding-right: 0;
     }
 }
 
