--- a/filter-grid-variables.css
+++ b/filter-grid-variables.css
@@ -1,14 +1,23 @@
 /* Stadium CSS */
 :root {
-    --repeater-filter-background-color: #f1f1f1;
-    
-    --repeater-integrated-filter-header-background-color: white;
-    --repeater-integrated-filter-border-color: transparent;
+    --filter-background-color: #f1f1f1;
 
-    --repeater-filter-clear-button-font-color: #3399ff;
-    --repeater-filter-clear-button-background-color: white;
-    --repeater-filter-clear-button-hover-font-color: #3399ff;
-    --repeater-filter-clear-button-hover-background-color: white;
+    --multi-select-background-color: #f5f5f5;
+	--multi-select-container-border-color: #f1f1f1;
+	--multi-select-container-padding: 0.6rem;
 
-    --repeater-filter-clear-button-position: 0; /*Set this to 1 to reverse the button order*/
+    --filter-chips-font-size: 1.1rem;
+    --filter-chips-label-font-size: 1rem;
+    --filter-chips-label-font-style: italic;
+    --filter-chips-chip-width: 13rem;
+    --filter-chips-chip-height: 3rem;
+    --filter-chips-chip-left-padding: 0.2rem;
+    --filter-chips-chip-border-radius: 0.5rem;
+    --filter-chips-operators-width: 3rem;
+    --filter-chips-operators-font-color: var(--FORM-CONTROL-FONT-COLOR);
+    --filter-chips-checkbox-list-border-color: var(--GENERAL-BORDER-COLOR);
+    --filter-chips-checkbox-list-background-color: var(--BODY-BACKGROUND-COLOR);
+    --filter-chips-apply-button-icon-size: 2.5rem;
+    --filter-chips-apply-button-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3C!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE --%3E%3Cpath fill='%23333333' d='m9.55 15.15l8.475-8.475q.3-.3.7-.3t.7.3t.3.713t-.3.712l-9.175 9.2q-.3.3-.7.3t-.7-.3L4.55 13q-.3-.3-.288-.712t.313-.713t.713-.3t.712.3z'/%3E%3C/svg%3E");
+    --filter-chips-clear-button-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3C!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE --%3E%3Cpath fill='%23333333' d='m12 13.4l-2.917 2.925q-.277.275-.704.275t-.704-.275q-.275-.275-.275-.7t.275-.7L10.6 12L7.675 9.108Q7.4 8.831 7.4 8.404t.275-.704q.275-.275.7-.275t.7.275L12 10.625L14.892 7.7q.277-.275.704-.275t.704.275q.3.3.3.713t-.3.687L13.375 12l2.925 2.917q.275.277.275.704t-.275.704q-.3.3-.712.3t-.688-.3z'/%3E%3C/svg%3E");
 }
